Page layouts and design finished. Responsiveness basically complete. Project page added and styled. JS expand and collapse feature added. Still need to tweak small details like scrolling pattern, and make sure all code and class names are clear and logical.

--- a/SCSS/defaults.scss
+++ b/SCSS/defaults.scss
@@ -12,7 +12,7 @@
 
 %default-section-heading {
 	font-family: $secondary;
-	font-size: 48px;
+	font-size: 3em;
 	letter-spacing: 0.05em;
 	margin-bottom: 20px;
 }
@@ -20,7 +20,7 @@
 %default-section-subheading {
 	font-family: $primary;
 	color: $kilamanjaro;
-	font-size: 28px;
+	font-size: 1.75em;
 	letter-spacing: 0.05em;
 	width: 90%;
 	text-align: left;
@@ -29,7 +29,7 @@
 %default-section-para {
 	font-family: $primary;
 	color: $kilamanjaro;
-	font-size: 22px;
+	font-size: 1.4em;
 	width: 90%;
 	text-align: left;
 	padding: 20px;
